WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245142
Mail sometimes crashes under -beginDraggingSessionWithItems: when dragging attachments in compose
https://bugs.webkit.org/show_bug.cgi?id=245142
Summary
Mail sometimes crashes under -beginDraggingSessionWithItems: when dragging at...
Wenson Hsieh
Reported
2022-09-13 08:09:41 PDT
rdar://99662145
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2022-09-13 08:23:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4313
EWS
Comment 2
2022-09-13 12:21:54 PDT
Committed
254450@main
(78fca16e3ae8): <
https://commits.webkit.org/254450@main
> Reviewed commits have been landed. Closing PR #4313 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug